# CS_236_Lab3

./: CMakeLists.txt  Database.h  Header.cpp  Header.h  Interpreter.cpp  Interpreter.h  Parameter.h  Parser.cpp  Parser.h  Predicate.h  Relation.cpp  Relation.h  Tuple.cpp  Tuple.h  main.cpp  test.txt
